# titanic-python

./: .env  .env.example  .env.gcs  .gitignore  Dockerfile.fastapi  Dockerfile.fastapi-gcs  Dockerfile.streamlit  README.md  application.py  cloudformation.yml  data_cleaning.py  deploy_api_gc.py  deploy_api_gcs.py  deploy_google_run.py  docker-compose.yml  eda.ipynb  fastapi_app.py  feature_importance.csv  gcloud_github  lambda_handler.py  main.py  model_training.py  openapi.json  package-lock.json  package.json  pyproject.toml  requirements-lambda.txt  requirements.txt  requirements_gcloud.txt  run_pipeline.py  serverless.yml  streamlit_app.py  titanic_fastapi.py  utils.py
.ebextensions/: 01_python.config
.github/workflows/: deploy-cloud-run.yml
aws/: DEPLOYMENT.md  deploy_runner.py  lambda-deploy.py
data/: sample_submission_v2.csv  submission_python.csv  submission_python_ct.csv  titanic.csv  train_baked.rds  train_clean.pkl  train_clean.rds
model/: titanic_model.pkl  titanic_model_ct_features.pkl
models/: titanic_model_ct.pkl  titanic_model_features.pkl
